--- a/roles/12_novacompute/tasks/main.yml
+++ b/roles/12_novacompute/tasks/main.yml
@@ -48,16 +48,18 @@
 - name: configure spice section 3 Repasarlo para hacerlo con vpn
   ini_file:
     path: /etc/nova/nova.conf
-    section: vnc
+    section: spice
     option: "{{ item.option }}"
     value: "{{ item.value }}"
   loop:
-    - { option: "enabled", value: 'true' }
+    - { option: "enabled", value: 'True' }
     - { option: "server_listen", value: '0.0.0.0' }
     - { option: "server_proxyclient_address", value: '$my_ip' }
-    - { option: "novncproxy_base_url", value: "https://{{ controller_fqdn }}:6080/vnc_auto.html" }
-    #- { option: "html5proxy_host", value: "0.0.0.0" }
-    #- { option: "html5proxy_port", value: "6082" }
+    #- { option: "novncproxy_base_url", value: "https://{{ controller_fqdn }}:6080/vnc_auto.html" }
+    - { option: "novncproxy_base_url", value: "https://172.22.121.1:6080/vnc_auto.html" }
+    - { option: "html5proxy_host", value: "0.0.0.0" }
+    - { option: "html5proxy_port", value: "6082" }
+    - [ option: "keymap", value: "es-es" }
   notify:
   - restart nova-compute
 
