--- a/roles/12_novacompute/tasks/main.yml
+++ b/roles/12_novacompute/tasks/main.yml
@@ -59,7 +59,7 @@
     - { option: "novncproxy_base_url", value: "https://172.22.121.1:6080/vnc_auto.html" }
     - { option: "html5proxy_host", value: "0.0.0.0" }
     - { option: "html5proxy_port", value: "6082" }
-    - [ option: "keymap", value: "es-es" }
+    - { option: "keymap", value: "es-es" }
   notify:
   - restart nova-compute
 
