--- a/roles/11_novaserver/tasks/main.yml
+++ b/roles/11_novaserver/tasks/main.yml
@@ -80,7 +80,7 @@
     - { option: "server_listen", value: '$my_ip' }
     - { option: "server_proxyclient_address", value: '$my_ip' }
     #- { option: "html5proxy_base_url", value: "http://{{ controller_fqdn }}:6082/spice_auto.html" }
-    - { option: "html5proxy_base_url", value: "https://172.121.1.:6082/spice_auto.html" }
+    - { option: "html5proxy_base_url", value: "https://172.22.121.1:6082/spice_auto.html" }
     - { option: "html5proxy_host", value: "0.0.0.0" }
     - { option: "html5proxy_port", value: "6082" }
   notify:
