--- a/roles/11_novaserver/tasks/main.yml
+++ b/roles/11_novaserver/tasks/main.yml
@@ -69,6 +69,7 @@
   notify:
   - restart nova-services
 
+
 - name: configure spice section 
   ini_file:
     path: /etc/nova/nova.conf
@@ -76,7 +77,7 @@
     option: "{{ item.option }}"
     value: "{{ item.value }}"
   loop:
-    - { option: "enabled", value: "True" }
+    - { option: "enabled", value: "true" }
     - { option: "server_listen", value: '$my_ip' }
     - { option: "server_proxyclient_address", value: '$my_ip' }
     #- { option: "html5proxy_base_url", value: "http://{{ controller_fqdn }}:6082/spice_auto.html" }
