--- a/roles/12_novacompute/tasks/main.yml
+++ b/roles/12_novacompute/tasks/main.yml
@@ -56,7 +56,7 @@
     - { option: "server_listen", value: '0.0.0.0' }
     - { option: "server_proxyclient_address", value: '$my_ip' }
     #- { option: "novncproxy_base_url", value: "https://{{ controller_fqdn }}:6080/vnc_auto.html" }
-    - { option: "html5proxy_base_url", value: "https://172.22.121.1:6082/spice_auto.html" }
+    - { option: "html5proxy_base_url", value: "http://172.22.121.1:6082/spice_auto.html" }
     - { option: "html5proxy_host", value: "0.0.0.0" }
     - { option: "html5proxy_port", value: "6082" }
     - { option: "keymap", value: "es-es" }
