--- a/roles/99_iesgn/tasks/main.yml
+++ b/roles/99_iesgn/tasks/main.yml
@@ -10,6 +10,7 @@
   notify: restart keystone 
  
 - name: create directory domain
+  file:
     path: /etc/keystone/domains
     state: directory
     mode: '0755'
