--- a/roles/99_iesgn/handlers/main.yml
+++ b/roles/99_iesgn/handlers/main.yml
@@ -10,3 +10,9 @@
 
 - name: restart keystone
   service: name=keystone state=restarted
+
+- name: restart web services
+  service: name={{ item }} state=restarted
+  with_items:
+    - apache2
+    - memcached
