--- a/roles/99_iesgn/tasks/main.yml
+++ b/roles/99_iesgn/tasks/main.yml
@@ -35,3 +35,15 @@
   environment: '{{k3}}'
   command: /usr/bin/openstack domain create iesgn
   when: result is failed
+
+
+## Logo
+
+- name: Copy file with owner and permissions
+  copy:
+    src: logo-splash2.svg
+    dest: /usr/share/openstack-dashboard/openstack_dashboard/static/dashboard/img/logo-splash2.svg
+    owner: root
+    group: root
+    mode: '0644'
+  notify: restart apache2
