--- a/roles/99_iesgn/handlers/main.yml
+++ b/roles/99_iesgn/handlers/main.yml
@@ -11,7 +11,7 @@
 - name: restart keystone
   service: name=keystone state=restarted
 
-- name: restart web services
+- name: restart apache2
   service: name={{ item }} state=restarted
   with_items:
     - apache2
