--- a/site.yml
+++ b/site.yml
@@ -122,8 +122,16 @@
 #  roles:
 #    - role: 20_heatserver
 
+
 - hosts: controller_nodes
   become: true
   gather_facts: no
   roles:
-    - role: 99_iesgn
+    - role: 98_restart_services
+
+
+#- hosts: controller_nodes
+#  become: true
+#  gather_facts: no
+#  roles:
+#    - role: 99_iesgn
