--- a/roles/98_restart_services/tasks/main.yml
+++ b/roles/98_restart_services/tasks/main.yml
@@ -11,3 +11,21 @@
     group: root
     mode: '0755'
   when: "'controller_nodes' in group_names"
+
+- name: Copy script restart_cinder
+  copy:
+    src: restart_cinder.sh
+    dest: /root/openstack_utils/restart_cinder.sh
+    owner: root
+    group: root
+    mode: '0755'
+  when: "'controller_nodes' in group_names"
+
+- name: Copy script restart_neutron_network
+  copy:
+    src: restart_neutron_network.sh
+    dest: /root/openstack_utils/restart_neutron_network.sh
+    owner: root
+    group: root
+    mode: '0755'
+  when: "'network_nodes' in group_names"
