--- a/site.yml
+++ b/site.yml
@@ -130,8 +130,14 @@
 #    - role: 98_restart_services
 
 
-- hosts: controller_nodes
+#- hosts: controller_nodes
+#  become: true
+#  gather_facts: no
+#  roles:
+#    - role: 99_iesgn
+
+- hosts: compute_nodes
   become: true
   gather_facts: no
   roles:
-    - role: 99_iesgn
+    - role: 100_iesgn_compute
