glance in storage_node

--- a/site.yml
+++ b/site.yml
@@ -37,11 +37,11 @@
 #  roles:
 #    - role: 06_openstackclient
 #
-- hosts: controller_nodes
-  become: true
-  gather_facts: no
-  roles:
-    - role: 07_keystoneserver
+#- hosts: controller_nodes
+#  become: true
+#  gather_facts: no
+#  roles:
+#    - role: 07_keystoneserver
 #     
 #- hosts: controller_nodes
 #  become: true
@@ -49,11 +49,11 @@
 #  roles:
 #    - role: 08_keystone_population
 #
-#- hosts: controller_nodes
-#  become: true
-#  gather_facts: no
-#  roles: 
-#    - role: 09_glanceserver
+- hosts: storage_nodes
+  become: true
+  gather_facts: no
+  roles: 
+    - role: 09_glanceserver
 #
 #- hosts: controller_nodes
 #  become: true
