--- a/roles/12_novacompute/tasks/main.yml
+++ b/roles/12_novacompute/tasks/main.yml
@@ -75,7 +75,7 @@
     path: /etc/nova/nova.conf
     section: glance
     option: api_servers
-    value: 'http://{{ controller }}:9292'  
+    value: 'http://{{ groups["storage_nodes"][0]]["internal_ip"] }}:9292'  
   notify:
   - restart nova-compute
 
