--- a/site.yml
+++ b/site.yml
@@ -60,17 +60,17 @@
 #  gather_facts: no
 #  roles: 
 #    - role: 10_placement
-#- hosts: controller_nodes
-#  become: true
-#  gather_facts: no
-#  roles: 
-#    - role: 11_novaserver
+- hosts: controller_nodes
+  become: true
+  gather_facts: no
+  roles: 
+    - role: 11_novaserver
 #
-#- hosts: compute_nodes
-#  become: true
-#  gather_facts: no
-#  roles:
-#    - role: 12_novacompute
+- hosts: compute_nodes
+  become: true
+  gather_facts: no
+  roles:
+    - role: 12_novacompute
 #
 #- hosts: controller_nodes
 #  become: true
@@ -110,11 +110,11 @@
 #  roles:
 #    - role: 18_cinderserver
 #
-#- hosts: storage_nodes
-#  become: true
-#  gather_facts: no
-#  roles:
-#    - role: 19_cindervolume
+- hosts: storage_nodes
+  become: true
+  gather_facts: no
+  roles:
+    - role: 19_cindervolume
 #
 #- hosts: controller_nodes
 #  become: true
