--- a/site.yml
+++ b/site.yml
@@ -49,23 +49,23 @@
 #  roles:
 #    - role: 08_keystone_population
 #
-- hosts: storage_nodes
-  become: true
-  gather_facts: no
-  roles: 
-    - role: 09_glanceserver
+#- hosts: storage_nodes
+#  become: true
+#  gather_facts: no
+#  roles: 
+#    - role: 09_glanceserver
 #
 #- hosts: controller_nodes
 #  become: true
 #  gather_facts: no
 #  roles: 
 #    - role: 10_placement
-- hosts: controller_nodes
-  become: true
-  gather_facts: no
-  roles: 
-    - role: 11_novaserver
-#
+#- hosts: controller_nodes
+#  become: true
+#  gather_facts: no
+#  roles: 
+#    - role: 11_novaserver
+##
 - hosts: compute_nodes
   become: true
   gather_facts: no
