--- a/site.yml
+++ b/site.yml
@@ -85,18 +85,18 @@
 #   - role: 14_neutronserver
 #  
 #
-#- hosts: network_nodes
-#  become: true
-#  gather_facts: no
-#  roles:
-#   - role: 15_neutronnetwork
+- hosts: network_nodes
+  become: true
+  gather_facts: no
+  roles:
+   - role: 15_neutronnetwork
 #
 #
-#- hosts: compute_nodes
-#  become: true
-#  gather_facts: no
-#  roles:
-#    - role: 16_neutroncompute
+- hosts: compute_nodes
+  become: true
+  gather_facts: no
+  roles:
+    - role: 16_neutroncompute
 
 #- hosts: controller_nodes
 #  become: true
