--- a/roles/19_cindervolume/tasks/main.yml
+++ b/roles/19_cindervolume/tasks/main.yml
@@ -24,7 +24,7 @@
     path: /etc/cinder/cinder.conf
     section: database
     option: connection
-    value: mysql+pymysql://cinder:{{ cinder_db_password }}@{{ controller }}/cinder
+    value: mysql+pymysql://cinder:{{ cinder_db_password }}@{{ hostvars[groups["controller_nodes"][0]]["internal_ip"] }}/cinder
   notify: 
   - restart cinder-services
 
@@ -36,7 +36,7 @@
     value: "{{ item.value }}"
   loop:
     - { option: "transport_url",
-    value: 'rabbit://{{ rabbit_user }}:{{ rabbit_password }}@{{ controller }}:5672/'}
+    value: 'rabbit://{{ rabbit_user }}:{{ rabbit_password }}@{{ hostvars[groups["controller_nodes"][0]]["internal_ip"] }}:5672/'}
     - { option: "my_ip", value: '{{ internal_ip }}' }
     - { option: "auth_strategy", value: keystone }
     - { option: "enabled_backends", value: lvm }
@@ -51,9 +51,9 @@
     option: "{{ item.option }}"
     value: "{{ item.value }}"
   loop:
-    - { option: "www_authenticate_uri", value: 'http://{{ controller }}:5000' }
-    - { option: "auth_url", value: 'http://{{ controller }}:5000' }
-    - { option: "memcached_servers", value: '{{ controller }}:11211' }
+    - { option: "www_authenticate_uri", value: 'http://{{ hostvars[groups["controller_nodes"][0]]["internal_ip"] }}:5000' }
+    - { option: "auth_url", value: 'http://{{ hostvars[groups["controller_nodes"][0]]["internal_ip"] }}:5000' }
+    - { option: "memcached_servers", value: '{{ hostvars[groups["controller_nodes"][0]]["internal_ip"] }}:11211' }
     - { option: "auth_type", value: password }
     - { option: "project_domain_name", value: Default}
     - { option: "user_domain_name", value: Default}
