--- a/roles/16_neutroncompute/tasks/main.yml
+++ b/roles/16_neutroncompute/tasks/main.yml
@@ -123,7 +123,7 @@
     option: "{{ item.option }}"
     value: "{{ item.value }}"
   loop:
-    - { option: "nova_metadata_host", value: "{{ hostvars[groups["controller_nodes"][0]]["internal_ip"] }}" }
+    - { option: "nova_metadata_host", value: '{{ hostvars[groups["controller_nodes"][0]]["internal_ip"] }}' }
     - { option: "metadata_proxy_shared_secret", value: "{{ shared_secret }}" }
   notify:
   - restart neutron-services
