--- a/site.yml
+++ b/site.yml
@@ -1,10 +1,10 @@
 ---
 
-#- hosts: all
-#  become: true
-#  gather_facts: no
-#  roles:
-#    - role: 01_common
+- hosts: all
+  become: true
+  gather_facts: no
+  roles:
+    - role: 01_common
 #
 #- hosts: controller_nodes
 #  become: true
@@ -110,11 +110,11 @@
 #  roles:
 #    - role: 18_cinderserver
 #
-- hosts: storage_nodes
-  become: true
-  gather_facts: no
-  roles:
-    - role: 19_cindervolume
+#- hosts: storage_nodes
+#  become: true
+#  gather_facts: no
+#  roles:
+#    - role: 19_cindervolume
 #
 #- hosts: controller_nodes
 #  become: true
