--- a/roles/11_novaserver/tasks/main.yml
+++ b/roles/11_novaserver/tasks/main.yml
@@ -4,6 +4,7 @@
     - nova-api
     - nova-conductor
     - nova-scheduler
+    - nova-consoleproxy
          
 
 - name: ensure nova_api database connections is configured
