--- a/roles/18_cinderserver/tasks/main.yml
+++ b/roles/18_cinderserver/tasks/main.yml
@@ -24,6 +24,7 @@
     value: 'rabbit://{{ rabbit_user }}:{{ rabbit_password }}@{{ internal_ip }}:5672/'}
     - { option: "my_ip", value: '{{ internal_ip }}' }
     - { option: "auth_strategy", value: keystone }
+    - { option: "glance_api_servers", value: 'http://{{ hostvars[groups["storage_nodes"][0]]["internal_ip"] }}:9292' }
   notify: 
   - restart cinder-services
 
