--- a/site.yml
+++ b/site.yml
@@ -26,35 +26,35 @@
 
 #
 #
-- hosts: controller_nodes
-  become: true
-  gather_facts: no
-  roles:
-    - role: 05_memcached
-
-- hosts: all
-  become: true
-  gather_facts: no
-  roles:
-    - role: 06_openstackclient
+#- hosts: controller_nodes
+#  become: true
+#  gather_facts: no
+#  roles:
+#    - role: 05_memcached
+#
+#- hosts: all
+#  become: true
+#  gather_facts: no
+#  roles:
+#    - role: 06_openstackclient
 #
 #- hosts: controller_nodes
 #  become: true
 #  gather_facts: no
 #  roles:
 #    - role: 07_keystoneserver
-#     
+     
 #- hosts: controller_nodes
 #  become: true
 #  gather_facts: no
 #  roles:
 #    - role: 08_keystone_population
-#
-#- hosts: storage_nodes
-#  become: true
-#  gather_facts: no
-#  roles: 
-#    - role: 09_glanceserver
+
+- hosts: storage_nodes
+  become: true
+  gather_facts: no
+  roles: 
+    - role: 09_glanceserver
 #
 #- hosts: controller_nodes
 #  become: true
