--- a/roles/10_placement/tasks/main.yml
+++ b/roles/10_placement/tasks/main.yml
@@ -3,6 +3,7 @@
   apt: name={{ item }}
   loop:
     - placement-api
+    - apache2
     
 - name: ensure placement database connection is configured
   ini_file:
@@ -38,13 +39,18 @@
     - { option: "project_name", value: service}
     - { option: "username", value: placement}
     - { option: "password", value: "{{ placement_identity_password }}" }
-    - { option: "region", value: "{{ region }}" }
-    - { option: "region_name", value: "{{ region }}" }
-    - { option: "service_token_roles_required", value: "true" }
   notify:
   - restart placement
 
-
+- name: ensure glance_authtoken is cleared
+  ini_file:
+    path: /etc/glance/glance-api.conf
+    section: keystone_authtoken
+    option: region_name
+    value: regionOne
+    state: absent
+  notify:
+  - restart placement
 
 - name: ensure placement db is initialized
   command: /usr/bin/placement-manage db sync
