--- a/site.yml
+++ b/site.yml
@@ -50,34 +50,35 @@
 #  roles:
 #    - role: 08_keystone_population
 
-- hosts: storage_nodes
-  become: true
-  gather_facts: no
-  roles: 
-    - role: 09_glanceserver
+#- hosts: storage_nodes
+#  become: true
+#  gather_facts: no
+#  roles: 
+#    - role: 09_glanceserver
 #
 #- hosts: controller_nodes
 #  become: true
 #  gather_facts: no
 #  roles: 
 #    - role: 10_placement
+#
 #- hosts: controller_nodes
 #  become: true
 #  gather_facts: no
 #  roles: 
 #    - role: 11_novaserver
 ##
-#- hosts: compute_nodes
-#  become: true
-#  gather_facts: no
-#  roles:
-#    - role: 12_novacompute
-#
-#- hosts: controller_nodes
-#  become: true
-#  gather_facts: no
-#  roles: 
-#    - role: 13_novadiscover
+- hosts: compute_nodes
+  become: true
+  gather_facts: no
+  roles:
+    - role: 12_novacompute
+
+- hosts: controller_nodes
+  become: true
+  gather_facts: no
+  roles: 
+    - role: 13_novadiscover
 #
 #- hosts: controller_nodes
 #  become: true
